# Windows

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_quick.bat  readme.txt
installer/: setup.iss
plans/: architecture.md
resources/: app.qrc  app.rc  styles.qss
resources/icons/: README.md
src/: main.cpp
src/core/: AssrtAPI.cpp  AssrtAPI.h  ConfigManager.h  HistoryManager.h  SubtitleManager.cpp  SubtitleManager.h
src/models/: AppConfig.h  SubtitleInfo.h  VideoFile.h
src/ui/: LogWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui
src/utils/: FileUtils.h  Logger.h  NameParser.h
